Ajust menu profile.

--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -19,17 +19,15 @@
 
     <mat-nav-list>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/home']" >Home</a>
-            <a mat-list-item  (click)="toggle()" [routerLink]="['/portal']" >Portais</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/portal']" >Portais</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/projeto']" >Projetos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/artefato']" >Artefatos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/elemento']" >Elementos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/configuracao']" >Configuração</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']" >Gerar App!</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/user']" *ngIf="isAdmin()" >Usuários</a>
-        <a mat-list-item  (click)="toggle()" [routerLink]="['/profile']" >Meu Perfil</a>
         <a mat-list-item  (click)="theme()" >Tema</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
-        <a mat-list-item  (click)="logout()" >Logout</a>
     </mat-nav-list>
   </mat-sidenav>
 
@@ -45,6 +43,22 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <img src="./../../../assets/images/logo.svg" style="width: 20px; padding-right: 5px" /> ngx-builder
+
+      <span class="example-spacer"></span>
+
+      <button mat-icon-button [matMenuTriggerFor]="moreMenu" aria-label="More"
+      (click)="$event.stopPropagation();">
+      <mat-icon class="secondary-text">person</mat-icon> 
+      </button>
+      <mat-menu #moreMenu="matMenu">
+          <button mat-menu-item aria-label="edit" [routerLink]="['/profile']">
+              <mat-icon>edit</mat-icon>
+              <span>Meu perfil</span>
+          </button>
+      </mat-menu>
+      <button mat-icon-button  (click)="logout()" aria-label="More">
+      <mat-icon class="secondary-text">exit_to_app</mat-icon> 
+      </button>
 
     </mat-toolbar>
 
