--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -19,15 +19,17 @@
 
     <mat-nav-list>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/home']" >Home</a>
-        <a mat-list-item  (click)="toggle()" [routerLink]="['/portal']" >Portais</a>
+            <a mat-list-item  (click)="toggle()" [routerLink]="['/portal']" >Portais</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/projeto']" >Projetos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/artefato']" >Artefatos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/elemento']" >Elementos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/configuracao']" >Configuração</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']" >Gerar App!</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/user']" *ngIf="isAdmin()" >Usuários</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/profile']" >Meu Perfil</a>
         <a mat-list-item  (click)="theme()" >Tema</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
+        <a mat-list-item  (click)="logout()" >Logout</a>
     </mat-nav-list>
   </mat-sidenav>
 
