--- a/output/frontend/src/app/erp/portal/portal-grid.component.html
+++ b/output/frontend/src/app/erp/portal/portal-grid.component.html
@@ -110,16 +110,11 @@
 						</mat-form-field>
 					</ng-container>
 				</query-builder>          
-
-				<hr>
-				<a mat-raised-button color="accent"   >
-					Aplicar
-				</a>
             
     <mat-card-content>
-    <div class="table-header" *ngIf="datasource">
+    <div class="table-header">
         <mat-form-field>
-          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtro rápido">
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
     </div>
 
