Análise de compilação.

--- a/output/frontend/src/app/erp/projeto/projeto-form.component.html
+++ b/output/frontend/src/app/erp/projeto/projeto-form.component.html
@@ -6,7 +6,7 @@
         <a mat-raised-button color="accent"  routerLink="/projeto" >
           <mat-icon>chevron_left</mat-icon>
         </a>
-        <button mat-raised-button color="accent" (click)="onSubmit()"><mat-icon>save</mat-icon></button>
+        <button mat-raised-button color="accent" (click)="onSubmit($event)"><mat-icon>save</mat-icon></button>
         <button mat-raised-button color="accent" (click)="options.resetModel()"><mat-icon>clear</mat-icon></button>
         <br>
         
